<resources>
    <string name="app_name">SocketPlayer</string>
    <string name="ip_n">IP: </string>
    <string name="port_n">PORT : \n</string>
    <string name="server">Server</string>
    <string name="client">Client</string>
    <string name="enter_ip_address">Enter IP Address</string>
    <string name="connect">Connect and Receive</string>
    <string name="choose_a_file">Choose a File</string>
    <string name="server_mode">Server Mode</string>
    <string name="client_mode">Client Mode</string>
    <string name="qr_code">QR Code</string>
    <string name="scan">Scan</string>
    <string name="filename">Filename</string>
    <string name="length">Length</string>
    <string name="enter_port">Enter Port</string>
    <string name="image">image</string>
    <string name="last_file">Last File</string>
</resources>
